--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "handlebars": "^4.7.6",
     "request": "^2.88.2"
   }
 }
