--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "hbs": "^4.7.6",
+    "handlebars": "^4.7.6",
     "nodemon": "^2.0.3",
     "request": "^2.88.2"
   }
